<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mod_courses">Modify Course</string>
    <string name="input_courseName">Course Name</string>
    <string name="input_instrEmail">Instructor Email</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="nav_courses">Courses</string>
    <string name="title_activity_mod_stu">Modify Student</string>
    <string name="title_activity_add_stu">Add Student</string>
    <string name="title_activity_tut_del_assignment">Delete Assignment</string>
    <string name="title_activity_tab_stu">Tutorial Section</string>
    <string name="title_activity_mod_marks">Modify Marks</string>
    <string name="title_activity_add_assignment">Add Assignment</string>
    <string name="title_activity_mod_assignment">Modify Assignment</string>
    <string name="title_activity_tab_mod_assignment">Assignee Details</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_add_group">Add Group</string>
    <string name="title_activity_mod_group">Modify Group</string>
    <string name="title_activity_mod_group_mark">Modify Group Mark</string>
    <string name="title_activity_add_session_dialog">Add Tutorial Session</string>
    <string name="add_memo">Add memo</string>
    <string name="title_activity_memo">MemoPad</string>
    <string name="enter_memo_promt">Enter Memo/Lesson Plan:</string>
    <string name="input_memo_hint">Type here</string>

</resources>