<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModCoursesActivity" >

    <EditText
        android:id="@+id/tutEditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/input_tutName"
        android:inputType="textCapCharacters"
        android:maxLength="32" >

        <requestFocus />
    </EditText>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutEditText1"
        android:layout_marginTop="10dp"
        android:weightSum="3" >

        <Button
            android:id="@+id/tutButton1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveButton"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/tutButton2"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelButton"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/tutButton3"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="deleteButton"
            android:text="@string/button_delete" />
    </LinearLayout>

</RelativeLayout>